--- a/index.html
+++ b/index.html
@@ -102,6 +102,10 @@
             grid-column: span 2;
             grid-row: span 2;
             justify-content: flex-start;
+background-image: url('bg.jpg'); 
+background-size: cover;          
+background-position: center;     
+background-repeat: no-repeat;
         }
         
         .profile-header {
